--- a/src/main/resources/templates/create-form.html
+++ b/src/main/resources/templates/create-form.html
@@ -11,42 +11,27 @@
   </head>
 <body>
     <h1 class="display-6 text-primary p-2">Spring MVC Application</h1>
-    <body class="container">
-      <h1>Todo List</h1>
-      <hr>
-      <table class="table table-striped table-bordered tablep-hover">
-        <thead class="table-dark">
-          <tr>
-            <th>Id</th>
-            <th>Description</th>
-            <th>Created</th>
-            <th>Last Modified</th>
-            <th>Completed</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr th:each="item: ${todoItems}">
-            <td th:text="${item.id}"></td>
-            <td th:text="${item.description}"></td>
-            <td th:text="${item.createdDate}"></td>
-            <td th:text="${item.lastModifiedDate}"></td>
-            <td th:text="${item.completed}"></td>
-            <td>
-              <div class="btn btn-group-sm" role="group">
-                <a class="btn btn-info d-inline" th:href="@{/todo/{id}(id=${item.id})}">Edit</a>
-                <a class="btn btn-danger d-inline" th:href="@{/todo/delete/{id}(id=${item.id})}">Delete</a>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="container">
+  
+        <form action="#" th:action="@{/todo/add}" method="post" th:object="${todo}">
+
+          <div class="form-group">
+            <label for="description">Todo Item</label>
+            <input type="text" class="form-control" id="description" name="description" th:field="*{description}" placeholder="Add a description">
+          </div>
+
+          <button class="btn btn-success my-1" type="submit">Create</button>
+  
+        </form>
+
+      </div>
+
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
       <!-- <script th:src="@{/webjars/jquery/3.0.0/jquery.min.js}"></script> -->
       <!-- <script th:src="@{/webjars/popper.js/1.12.9-1/umd/popper.min.js}"></script> -->
       <!-- <script th:src="@{/webjars/bootstrap/4.0.0-2/js/bootstrap.min.js}"></script> -->
 
-    </body>
+</body>
 
 </html>
